--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,6 @@
 
-<main>
+
+<main class="section">
   <div class="container">
 
     <section class="section register min-vh-100 d-flex flex-column align-items-center justify-content-center py-4">
