--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 <ng-template [ngIf]=isLoggedIn>
     <app-sidebar></app-sidebar>
 </ng-template>
-
+<ngx-ui-loader fgsType="square-loader"></ngx-ui-loader>
 <router-outlet></router-outlet>
 
 <footer></footer>   
