--- a/src/app/Registers/Menu/Menu.component.html
+++ b/src/app/Registers/Menu/Menu.component.html
@@ -2,7 +2,7 @@
 
 
 <main id="main" class="main">
-  <div class="pagetitle">
+  <div class="pagetitle" *ngIf="isloaded">
     <h1>{{RFQDetail[0].name}}</h1>
     <nav>
       <ol class="breadcrumb">
@@ -26,7 +26,7 @@
           
             <div class="carousel-inner">
               <div class="carousel-item active">
-               <a [routerLink]="[productitem.route]"><img src="../../../assets/images/image2@5x.jfif" style="height: auto" class="d-block w-100" alt="..."></a>
+               <a [routerLink]="[productitem.route,RFQDetail[0].name,productitem.description]"><img src="../../../assets/images/image2@5x.jfif" style="height: auto" class="d-block w-100" alt="..."></a>
  
          
           
