--- a/src/app/Registers/OnGoing/Edit/outgoingEdit.component.html
+++ b/src/app/Registers/OnGoing/Edit/outgoingEdit.component.html
@@ -1,10 +1,20 @@
 <main id="main" class="main">
+  <div class="pagetitle">
+    <h1>{{project}}</h1>
+    <nav>
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item ">{{project}}</li> 
+        <li class="breadcrumb-item active">{{description}}</li>
+ 
+      </ol>
+    </nav>
+  </div><!-- End Page Title -->
   <section class="section">
 <div class="col-lg-12">
 
     <div class="card">
       <div class="card-body">
-        <h5 class="card-title"> <span style="color: red;font-size: larger;">{{items.reference}}</span></h5>
+        <h5 class="card-title"> <span style="color: red;font-size: large;">{{items.reference}}</span></h5>
       
         <!-- General Form Elements -->
         <form #itemForm="ngForm" novalidate (ngSubmit)="onFormSubmit(itemForm)">
@@ -94,16 +104,16 @@
               <button type="button" class="btn btn-success pull-right" (click)="goback()">Go Back </button>
             </div>
            
-            <div class="col-sm-3" >
+           <!--  <div class="col-sm-3" >
            
               <span *ngIf="isViewLoading">
                   <img src="../../assets/images/ng-loader.gif"/>
                   <span style="color: red">Processing!!! Please wait....</span>
               
                 </span>
-              </div>
+              </div> -->
            
-            <div class="col-sm-4" >  
+            <div class="col-sm-6" >  
               <span style="color: red;font-size: x-large;" #message></span>
             </div>
           </div>
