--- a/src/app/Registers/OnGoing/Edit/outgoingEdit.component.html
+++ b/src/app/Registers/OnGoing/Edit/outgoingEdit.component.html
@@ -98,7 +98,7 @@
           <div class="row mb-3"  >
           
             <div class="col-sm-2" >  
-              <button type="submit" class="btn btn-primary" [disabled]="itemForm.invalid" >Save</button>
+              <button type="submit" class="btn btn-primary" [disabled]="itemForm.invalid" #BSubmit>Save</button>
             </div>
             <div class="col-sm-2" >  
               <button type="button" class="btn btn-success pull-right" (click)="goback()">Go Back </button>
