--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,72 +1,60 @@
 
-
-<main class="section">
-  <div class="container">
-
-    <section class="section register min-vh-100 d-flex flex-column align-items-center justify-content-center py-4">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
-
-            <div class="d-flex justify-content-center py-4">
-              <a href="index.html" class="logo d-flex align-items-center w-auto">
-                <img src="assets/img/logo.png" alt="">
-                <span class="d-none d-lg-block">DCC</span>
-              </a>
-            </div><!-- End Logo -->
-
-            <div class="card mb-3">
-
-              <div class="card-body">
-
-                <div class="pt-4 pb-2">
-                  <h5 class="card-title text-center pb-0 fs-4">Login to Your Account</h5>
-                  <p class="text-center small">Enter your <b>Window's</b> username & password to login</p>
-                </div>
-                <form (ngSubmit)="onSubmitlogin(loginform)" #loginform="ngForm" class="row g-3 needs-validation" novalidate>
-                 <div class="col-12">
-                    <label for="yourUsername" class="form-label">Username</label>
-                    <div class="input-group has-validation">
+    <div class="body">	
+        <div class="Login_Container">
+	
+        <div class="main-login">
+            <div class="inner_bg">
+                <div class="col-sm-6 LeftSec">
+                    <div class="Listing">
+                   <ul>
+                            <li>
+                                <a href="#"><span class="Icon"><img src="/assets/img/Icon1.svg" /></span> User Guide</a>
+                            </li>
+                            <li>
+                              <a href="#"><span class="Icon"><img style="width: 45px;" src="/assets/img/deals-and-discounts.svg" /></span>  Type of Register</a>
+                          </li>
+                            <li>
+                                <a href="#"><span class="Icon"><img src="/assets/img/Icon4.svg" /></span>  Contact Us</a>
+                            </li>
+						
+							
+							<li>
+                                <a href="#"><span class="Icon"><img src="/assets/img/Icon6.svg" /></span>  FAQs</a>
+                            </li>
+                        </ul>
+                    </div>
                    
-                      <input type="text" name="username" class="form-control" id="yourUsername" required>
-                      <div class="invalid-feedback">Please enter your username.</div>
+                </div>
+                <div class="col-sm-6 RightSec text-center">
+                    <div class="desktopLogo" href="#"><img src="/assets/img/logonew.png" /></div>
+                   
+                    <div class="login-form">
+                      <form (ngSubmit)="onSubmitlogin(loginform)" #loginform="ngForm" class="row g-3 needs-validation" novalidate>
+					              <div class="main-form" >
+						               <div class="form-group">
+                                <span class="FieldIcon"><img src="/assets/img/UserIcon.svg" /></span>
+								                <input type="text"  name="username" class="form-control" id="yourUsername" required Placeholder="Window's Username" autocomplete="off" readonly onfocus="this.removeAttribute('readonly');"/>
+								            </div>
+                            
+                            <div class="form-group">
+                                <span class="FieldIcon"><img src="/assets/img/PWIcon.svg" /></span>
+                                <input type="password" name="password" class="form-control" id="yourPassword" required Placeholder="Windowd's Password"  autocomplete="off" readonly onfocus="this.removeAttribute('readonly');"/>
+                            	  <span id="eye-icon" toggle="#password1" class="fa fa-fw fa-eye-slash field-icon toggle-password" style="display:none;"></span>
+								            </div>
+							   
+						                <div class="form-group">
+                              <button class="btn btn-login" type="submit">Login</button>
+                             
+                          </div>
+                    
+                        </div>
+                      </form>
                     </div>
-                  </div>
-
-                  <div class="col-12">
-                    <label for="yourPassword" class="form-label">Password</label>
-                    <input type="password" name="password" class="form-control" id="yourPassword" required>
-                    <div class="invalid-feedback">Please enter your password!</div>
-                  </div>
-
-                  <div class="col-12">
-                    <div class="form-check">
-                     
-                    </div>
-                  </div>
-                  <div class="col-12">
-                    <button class="btn btn-primary w-100" type="submit">Login</button>
-                  </div>
-                  
-                </form>
-
-              </div>
+                   
+                </div>
             </div>
-
-            <div class="credits">
-              <!-- All the links in the footer should remain intact. -->
-              <!-- You can delete the links only if you purchased the pro version. -->
-              <!-- Licensing information: https://bootstrapmade.com/license/ -->
-              <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/ -->
-              Designed by <a href="#">AJES IT Department</a>
-            </div>
-
-          </div>
         </div>
-      </div>
 
-    </section>
-
-  </div>
-</main><!-- End #main -->
+    </div>
+</div>
 
