--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 
     <div class="body">	
         <div class="Login_Container">
-	
+        
         <div class="main-login">
             <div class="inner_bg">
                 <div class="col-sm-6 LeftSec">
@@ -27,7 +27,7 @@
                 </div>
                 <div class="col-sm-6 RightSec text-center">
                     <div class="desktopLogo" href="#"><img src="/assets/img/logonew.png" /></div>
-                   
+                    <span>DCC </span>
                     <div class="login-form">
                       <form (ngSubmit)="onSubmitlogin(loginform)" #loginform="ngForm" class="row g-3 needs-validation" novalidate>
 					              <div class="main-form" >
