--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="col-sm-6 RightSec text-center">
                     <div class="desktopLogo" href="#"><img src="/assets/img/logonew.png" /></div>
-                    <span>DCC </span>
+                    <span>Document Control Center </span>
                     <div class="login-form">
                       <form (ngSubmit)="onSubmitlogin(loginform)" #loginform="ngForm" class="row g-3 needs-validation" novalidate>
 					              <div class="main-form" >
@@ -38,7 +38,7 @@
                             
                             <div class="form-group">
                                 <span class="FieldIcon"><img src="/assets/img/PWIcon.svg" /></span>
-                                <input type="password" name="password" class="form-control" id="yourPassword" required Placeholder="Windowd's Password"  autocomplete="off" readonly onfocus="this.removeAttribute('readonly');"/>
+                                <input type="password" name="password" class="form-control" id="yourPassword" required Placeholder="Window's Password"  autocomplete="off" readonly onfocus="this.removeAttribute('readonly');"/>
                             	  <span id="eye-icon" toggle="#password1" class="fa fa-fw fa-eye-slash field-icon toggle-password" style="display:none;"></span>
 								            </div>
 							   
