--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,7 +8,7 @@
                     <div class="Listing">
                    <ul>
                             <li>
-                                <a href="#"><span class="Icon"><img src="assets/img/Icon1.svg" /></span> User Guide salman</a>
+                                <a href="#"><span class="Icon"><img src="assets/img/Icon1.svg" /></span> User Guide Phase2SalmanDev</a>
                             </li>
                             <li>
                               <a href="#"><span class="Icon"><img style="width: 45px;" src="assets/img/deals-and-discounts.svg" /></span>  Type of Register</a>
