--- a/src/app/Registers/OnGoing/Add/outgoingAdd.component.html
+++ b/src/app/Registers/OnGoing/Add/outgoingAdd.component.html
@@ -35,19 +35,19 @@
           <div class="row mb-3">
             <label for="inputText" class="col-sm-2 col-form-label">Orig</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" id="Orign" name="Orign" [(ngModel)]="items.orign" required>
+              <input type="text" class="form-control" id="Orign" name="Orign" [(ngModel)]="items.orign">
             </div>
           </div>
           <div class="row mb-3">
             <label for="inputEmail" class="col-sm-2 col-form-label">CorresType</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" id="CorresType" name="CorresType" [(ngModel)]="items.corresType" required>
+              <input type="text" class="form-control" id="CorresType" name="CorresType" [(ngModel)]="items.corresType" >
             </div>
           </div>
           <div class="row mb-3">
             <label for="inputPassword" class="col-sm-2 col-form-label">File NO.</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" id="FileNo" name="FileNo" [(ngModel)]="items.fileNo" required>
+              <input type="text" class="form-control" id="FileNo" name="FileNo" [(ngModel)]="items.fileNo">
             </div>
           </div>
          
