--- a/src/app/Registers/OnGoing/List/outgoinglist.component.html
+++ b/src/app/Registers/OnGoing/List/outgoinglist.component.html
@@ -22,6 +22,8 @@
           [showRowLines]="true"
           [showBorders]="true"
           [hoverStateEnabled]="true"
+          [allowColumnResizing]="true"
+          [autoNavigateToFocusedRow]="true"
         
           >
           
