--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,10 +1,12 @@
 
     <div class="body">	
         <div class="Login_Container">
-        
+       
         <div class="main-login">
             <div class="inner_bg">
+                <span style="font-weight: bold;font-size:x-large;font:Arial, Helvetica, sans-serif;text-align: center;">Document Management Center </span>
                 <div class="col-sm-6 LeftSec">
+                    
                     <div class="Listing">
                    <ul>
                             <li>
@@ -27,7 +29,7 @@
                 </div>
                 <div class="col-sm-6 RightSec text-center">
                     <div class="desktopLogo" href="#"><img src="assets/img/logonew.png" /></div>
-                    <span style="font-weight: bold;">Document Management Center </span>
+                  
                     <div class="login-form">
                       <form (ngSubmit)="onSubmitlogin(loginform)" #loginform="ngForm" class="row g-3 needs-validation" novalidate>
 					              <div class="main-form" >
