--- a/src/app/Registers/OnGoing/List/outgoinglist.component.html
+++ b/src/app/Registers/OnGoing/List/outgoinglist.component.html
@@ -24,7 +24,7 @@
           [hoverStateEnabled]="true"
           [allowColumnResizing]="true"
           [autoNavigateToFocusedRow]="true"
-        
+          [focusedRowEnabled]="true"
           >
           
             
@@ -44,8 +44,8 @@
              
              
              ></dxi-column>
-          <dxi-column dataField="corresType" caption="Corresp.Type"></dxi-column>
-          <dxi-column dataField="fileNo" caption="File No"></dxi-column>
+          <dxi-column dataField="corresType" caption="Corresp.Type" ></dxi-column>
+          <dxi-column dataField="fileNo" caption="File No" ></dxi-column>
           <dxi-column dataField="reference" caption="Reference" [width]="200"></dxi-column>
           <dxi-column 
             dataField="subject" 
