--- a/src/app/shared/topnav/topnav.component.html
+++ b/src/app/shared/topnav/topnav.component.html
@@ -17,7 +17,7 @@
 
         <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
           
-          <span class="d-none d-md-block dropdown-toggle ps-2">Hi, {{Name}}</span>
+          <span class="d-none d-md-block dropdown-toggle ps-2">Hi, {{msg.isWelComeName$.value}}</span>
         </a><!-- End Profile Iamge Icon -->
 
         <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
