--- a/src/app/shared/topnav/topnav.component.html
+++ b/src/app/shared/topnav/topnav.component.html
@@ -27,7 +27,7 @@
           </li>
           
           <li>
-            <a class="dropdown-item d-flex align-items-center" href="#">
+            <a class="dropdown-item d-flex align-items-center" >
               <i class="bi bi-box-arrow-right"></i>
               <span> <a  routerLink='/logout'> Log Out</a></span>
             </a>
